; ModuleID = '/home/carl/AnghaBench/linux/net/ipv4/extr_tcp_input.c_tcp_rcv_synrecv_state_fastopen.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv4/extr_tcp_input.c_tcp_rcv_synrecv_state_fastopen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32 }
%struct.request_sock = type { i32 }
%struct.TYPE_3__ = type { i32, i64 }
%struct.TYPE_4__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sock*)* @tcp_rcv_synrecv_state_fastopen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tcp_rcv_synrecv_state_fastopen(%struct.sock* %0) #0 {
  %2 = alloca %struct.sock*, align 8
  %3 = alloca %struct.request_sock*, align 8
  store %struct.sock* %0, %struct.sock** %2, align 8
  %4 = load %struct.sock*, %struct.sock** %2, align 8
  %5 = call i32 @tcp_try_undo_loss(%struct.sock* %4, i32 0)
  %6 = load %struct.sock*, %struct.sock** %2, align 8
  %7 = call %struct.TYPE_3__* @tcp_sk(%struct.sock* %6)
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  store i64 0, i64* %8, align 8
  %9 = load %struct.sock*, %struct.sock** %2, align 8
  %10 = call %struct.TYPE_4__* @inet_csk(%struct.sock* %9)
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  store i64 0, i64* %11, align 8
  %12 = load %struct.sock*, %struct.sock** %2, align 8
  %13 = call %struct.TYPE_3__* @tcp_sk(%struct.sock* %12)
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load %struct.sock*, %struct.sock** %2, align 8
  %17 = call i32 @lockdep_sock_is_held(%struct.sock* %16)
  %18 = call %struct.request_sock* @rcu_dereference_protected(i32 %15, i32 %17)
  store %struct.request_sock* %18, %struct.request_sock** %3, align 8
  %19 = load %struct.sock*, %struct.sock** %2, align 8
  %20 = load %struct.request_sock*, %struct.request_sock** %3, align 8
  %21 = call i32 @reqsk_fastopen_remove(%struct.sock* %19, %struct.request_sock* %20, i32 0)
  %22 = load %struct.sock*, %struct.sock** %2, align 8
  %23 = call i32 @tcp_rearm_rto(%struct.sock* %22)
  ret void
}

declare dso_local i32 @tcp_try_undo_loss(%struct.sock*, i32) #1

declare dso_local %struct.TYPE_3__* @tcp_sk(%struct.sock*) #1

declare dso_local %struct.TYPE_4__* @inet_csk(%struct.sock*) #1

declare dso_local %struct.request_sock* @rcu_dereference_protected(i32, i32) #1

declare dso_local i32 @lockdep_sock_is_held(%struct.sock*) #1

declare dso_local i32 @reqsk_fastopen_remove(%struct.sock*, %struct.request_sock*, i32) #1

declare dso_local i32 @tcp_rearm_rto(%struct.sock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
